# tooltrim

./: .gitignore  LICENSE  README.md  benchmark.py  compare_runs.py  pyproject.toml  run_faithfulness.py  run_proxy.py  save_benchmark.py
benchmarks/: COMPARISON.md  ONLINE_GROQ.md
benchmarks/runs/2026-06-27_llama3.1-8b/: report.md  results.csv  run.json
benchmarks/runs/2026-06-28_llama3.1-8b/: report.md  results.csv  run.json
benchmarks/runs/2026-06-28_mistral-7b/: report.md  results.csv  run.json
eval/: __init__.py  dataset.py  harness.py  judge.py  metrics.py  models.py
examples/: 01_raw_decorator.py  02_openai_function_calling.py  03_langchain_tool.py  04_expand_tool.py
tests/: test_cli.py  test_compressors.py  test_core.py  test_decorators.py  test_detect.py  test_eval.py  test_integrations.py  test_metrics.py  test_proxy.py  test_store.py
tooltrim/: __init__.py  cli.py  core.py  decorators.py  detect.py  llm.py  metrics.py  proxy.py  relevance.py  store.py  tokens.py
tooltrim/compressors/: __init__.py  _budget.py  html.py  json_.py  logs.py  tabular.py  text.py
tooltrim/integrations/: __init__.py  langchain.py
