[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tooltrim"
version = "0.1.0"
description = "Drop-in compression for LLM agent tool outputs. Shrink bloated HTML/JSON/log results before they re-enter context — cut tokens, stay on-task, keep full output retrievable."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nachiket Lele" }]
keywords = [
    "llm", "agents", "tool-use", "context", "token", "compression",
    "openai", "anthropic", "langchain", "rag", "function-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
tokens = ["tiktoken>=0.5"]
langchain = ["langchain-core>=0.2"]
redis = ["redis>=4"]
s3 = ["boto3>=1.26"]
dev = ["pytest>=7", "tiktoken>=0.5"]

[project.scripts]
tooltrim = "tooltrim.cli:main"

[project.urls]
Homepage = "https://github.com/nac7/tooltrim"
Repository = "https://github.com/nac7/tooltrim"
Issues = "https://github.com/nac7/tooltrim/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tooltrim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
